# superior-agents

./: .example.env  .gitignore  CONTRIBUTING.md  GETTING_STARTED.md  LICENSE  Makefile  QUICKSTART.md  README.md  WINDOWS_WSL.md  bootstrap.sh  docker-compose.prod.yml  docker-compose.quickstart.yml  docker-compose.yml  ecosystem.config.js  pyproject.toml  requirements.txt  single-agent.md  superior-agents.code-workspace
agent/: .dockerignore  .env.example  .example.env  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
agent/data/: prompts.json
agent/db/: agentic_yaitsiu.db  chat_history.json
agent/docker/: Dockerfile  docker-compose.yml  erc_20_abi.json  requirements.txt
agent/rag/: folder_starter.txt
agent/scripts/: main.py  main_marketing.py  main_marketing_2.py  main_trader.py  main_trader_4.py  precommit.py  print_db.py  starter.py  tee_txn_signer.py
agent/scripts/can_delete/: main_marketing.py  main_marketing_2.py  main_trader.py  main_trader_4.py
agent/scripts/db/: update_agent_session.py
agent/scripts/tee-txn-signer/: package.json
agent/scripts/tee-txn-signer/src/: main.ts
agent/scripts/tee-txn-signer/src/signers/: eth.service.ts  signers.module.ts  sol.service.ts
agent/scripts/tee-txn-signer/src/swap-providers/: base-swap.provider.ts  okx.service.ts  swap-providers.module.ts
agent/src/: config.py  constant.py  constants.py  container.py  helper.py  llm_functions.py  manager.py  rag.py  secret.py  summarizer.py  tool_decorator.py  twitter.py  types.py  wallet.py
agent/src/agent/: marketing.py  marketing_2.py  trading.py  trading_2.py
agent/src/agent/unused/: trading_2.py
agent/src/client/: openrouter.py  rag.py
agent/src/datatypes/: __init__.py  marketing.py  trading.py
agent/src/db/: 00001_init.sql  00002_seed.sql  __init__.py  interface.py  rest_api.py  sqlite.py  trading_2.py
agent/src/flows/: marketing.py  trading.py
agent/src/genner/: Base.py  Claude.py  Deepseek.py  OAI.py  OR.py  Qwen.py  __init__.py
agent/src/sensor/: interface.py  marketing.py  trading.py
agent/starter/: marketing.json  trading.json
agent/tests/: test_genner.py
agent/tests/mock_client/: interface.py  rag.py
agent/tests/mock_genner/: MockGenner.py
agent/tests/mock_sensor/: marketing.py  trading.py  wallet.py
api_db/: Dockerfile  config.py  init_db.py
rag-api/: .dockerignore  Dockerfile  README.md  api.py  docker-compose.yml  fetch.py  fly.toml  pyproject.toml  requirements.txt  store.py
rag-api/scripts/: api.py
rag-api/src/: fetch.py  store.py
rag-api/tests/: clear_pkl.sh  test_whole_flow.py
(+299 files in other folders)
